--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,20 +1,160 @@
-:root{
-    --g-font: rgb(36, 36, 235);
+#contact_banner{                
+    height: 20em;
+    width: 100%;
+    color: white;
+    margin: 8.5rem 0px 1rem 0px;
+    background-image: url("../images/telephoneimg.avif");
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    opacity: 2;
 }
-/* .img{
-    height:350px ;
-    width: 60rem;
-    background-size:cover;
-    margin-top:3rem;
-    
-} */
-/* @media (max-width: 767px) {
-    .img {
-        width: 20rem; 
-        max-width: none; 
-    }
-} */
+#contact_banner  h1{
+    font-size: 3em;
+    font-weight: bold;
+    padding-top: 5rem;
+    animation: slideMe .9s ease-in;
+}
 
+.contact-left{
+    border-radius: 10pz;
+    margin: 1rem 0rem;
+    padding: 4rem 0rem ;
+    text-align: left;
+    background-color: rgb(251, 250, 250);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.contact-left2{
+    border-radius: 10pz;
+    margin: 1rem 0rem;
+    padding: 4rem 3rem ;
+    text-align: left;
+    font-size: 20px;
+    line-height: 4rem;
+    background-color: rgb(54, 53, 53);
+    color: rgb(199, 198, 198);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+.contact_items ul li{
+    list-style: none;
+    padding: 1rem 1rem;
+    font-size: 20px;
+}
+.contact-right{
+    padding: 0rem 1rem;
+    margin-bottom: 2rem;
+}
+
+
+@keyframes slideMe{
+    0%{
+        transform: rotateY(40deg) translateY(500px);
+    }
+    100%{
+        transform: rotate(0deg);
+
+    }
+}
+#contact_banner p{
+    font-family: 'Signika Negative', sans-serif;
+    font-size: 25px;
+    color: #E9E3E3;
+    padding-top: 1em;
+    animation: slideMe .9s ease-in;
+}
+@keyframes slideMe{
+    0%{
+        transform: rotateY(40deg) translateY(500px);
+    }
+    100%{
+        transform: rotate(0deg);
+
+    }
+}
+
+@media screen and (max-width: 667px) {
+    #contact_banner{                
+        height: 20em;
+        width: 100%;
+        color: white;
+        margin: 10rem 1px 1rem 0px;
+        background-image: url("../images/telephoneimg.avif");
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 10px;
+        opacity: 2;
+    }
+    #contact_banner  h1{
+        font-size: 2em;
+        font-weight: bold;
+        padding-top: 5rem;
+        animation: slideMe .9s ease-in;
+    }
+    #contact_banner p{
+        font-family: 'Signika Negative', sans-serif;
+        font-size: 18px;
+        color: #E9E3E3;
+        padding-top: 1em;
+        animation: slideMe .9s ease-in;
+    }
+    .contact-left{
+        margin: 4rem 0rem;
+        background-color: rgb(251, 250, 250);
+        box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    }
+    .contact-left2{
+        border-radius: 10pz;
+        margin: 0rem 0rem 1rem 0rem;
+        padding: 1rem 1rem ;
+        text-align: left;
+        font-size: 18px;
+        line-height: 1.5rem;
+        background-color: rgb(54, 53, 53);
+        color: rgb(199, 198, 198);
+        box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    }
+    .contact-left h2{
+        font-size: 18px;
+    }
+    .contact_items ul li{
+        list-style: none;
+        padding: 1rem 1rem;
+    }     
+    .contact-right{
+        padding: 0rem 1rem;
+    }
+}
+
+
+
+
+
+/* :root{
+    --red-boy: rgb(239, 0, 0);
+}
+main{
+    padding: 6.8em 0 0;
+    margin: 0 auto;
+    height: auto;
+    width: 90vw;
+}
+
+.upper_nav{
+    color: white;
+    display: flex;
+    position: relative;
+    top: 2.3em;
+}
+.upper_nav > p{
+    padding: 0 2em;
+}
+
+.bar_nav{
+    display: flex;
+    flex-direction: column;
+    gap: 2;
+}
 
 .red-button {
     background-color: red;
@@ -35,8 +175,13 @@
     list-style-type: none;
     justify-content: start;
 }
+
+#logo_img{
+    width: 9em;
+}
+
 .reg_btn{
-    background-color: var(--g-font);
+    background-color: var(--red-boy);
     border: 1px solid black;
     font-size: 16px;
     padding: 5px;
@@ -45,69 +190,66 @@
     transition: ease-out 1s;
 }
 .reg_btn:hover{
-    color: var(--g-font);
+    color: var(--red-boy);
     background-color: white;
-    border: 1px solid var(--g-font);
+    border: 1px solid var(--red-boy);
     font-size: 16px;
     padding: 5px;
     border-radius: 5px;
 }
 
-#contact_banner{                
-    height: 33em;
-    width: 100%;
-    color: white;
-    background-image: url("../images/telephoneimg.avif");
-    background-position: center;
-    background-repeat: no-repeat;
-    
-    opacity: 2;
-}
-#contact_banner  h1{
-    font-size: 4em;
-    font-weight: bold;
-    padding-top: 12rem;
-}
-#contact_banner p{
-    font-family: 'Signika Negative', sans-serif;
-    font-size: 20px;
-    color: #E9E3E3;
-    padding-top: 4em;
-}
-#contact_banner > h1::after {
-    content: '';
-    background: var(--g-font);
-    display: flex;
-    flex-direction: row;
-    width: 6em;
-    height: 4px;
-    margin-left: 7.2em;
-    z-index: 900;
-    
-}
-.cont{
+
+
+.contact_left{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.cont > h2{
+.contact_left > h2{
     font-weight: bold;
     font-size: 2em;
-    color: var(--g-font)
+    color: var(--red-boy);
+    animation: slideMe .7s ease-in;
 }
-.cont > h2::after {
-    content: "";
 
+@keyframes slideMe{
+    0%{
+        transform: rotateY(40deg) translateY(500px);
+    }
+    100%{
+        transform: rotate(0deg);
+
+    }
 }
+
+.contact_items{
+    animation: slideMe .70s ease-in;
+}
+
+@keyframes slideMe{
+    0%{
+        transform: rotateY(40deg) translateY(500px);
+    }
+    100%{
+        transform: rotate(0deg);
+
+    }
+}
+
+.contact_right{
+    width: 6em;
+}
+
 
 #contact_details{
-    height: 70vh;
+    height: 125vh;
 }
 #contact_lower{
     color: white;
-    background-color: black;
-    height: 50vh;
+    background-color: rgb(48, 48, 48);
+    height: 60vh;
+    width: 90vw;
     padding: 6em 8rem;
 }
 #contact_lower > h1{
@@ -117,3 +259,198 @@
     font-family: 'Exo', sans-serif;
     font-size: 2em;
 }
+
+#contact_details2{
+    width: 101.2%;
+}
+
+
+.mo-icon {
+    z-index: 1;
+    border: 2px solid white;
+    width: 50px;
+    margin: 0 30px;
+    padding: 0.3rem 0rem;
+    color: white;
+    border-radius: 10px;
+}
+.register_action{
+    display: none;
+} */
+
+/* MEDIA QUERY section */
+/* @media screen and (max-width: 820px){
+    #logo_img {
+        width: 8em;
+        padding: 2px 0rem;
+    }
+
+    .navbar {
+        margin: 0px;
+        padding: 2rem 0rem;
+    }
+
+    .navbar-brand img {
+        width: 50%;
+    }
+
+    #contact_banner{                
+        height: 23em;
+        width: 40%;
+        color: white;
+        background-image: url("../images/telephoneimg.avif");
+        background-size: contain;
+        background-position: start;
+        background-repeat: no-repeat;    
+        opacity: 2;
+    }
+
+    #contact_banner  h1{
+        font-size: 1em;
+        font-weight: bold;
+        padding-top: 12rem;
+    }
+    #contact_banner p{
+        font-family: 'Signika Negative', sans-serif;
+        font-size: 5px;
+        color: #E9E3E3;
+        padding-top: 4em;
+    }
+    
+}
+@media screen and (max-width: 765px){
+    .navbar {
+        margin: 0px;
+        padding: 2rem 0rem;
+    }
+
+    .navbar-brand img {
+        width: 50%;
+    }
+}
+@media screen and (max-width: 667px){
+    #logo_img {
+        width: 3em;
+    }
+}
+@media screen and (max-width: 414px){
+    #logo_img {
+        width: 12em;
+    }
+}
+@media screen and (max-width: 375px){
+    
+    #logo_img {
+        width: 8em;
+        padding: 2px 0rem;
+    }
+    main{
+        padding: 6.8em 0 0;
+        margin: auto auto;
+        height: 170vh;
+        width: 90vw;
+    }
+
+    .contact_left{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 40vh;
+    }
+    .contact_left > h2{
+        font-weight: bold;
+        font-size: 20px;
+        color: var(--red-boy)
+    }
+    .contact_left > p{
+        font-size: 30px;
+    }
+    .no-numbers {
+        list-style-type: none;
+        justify-content: start;
+        font-size: 23px;
+    }
+    #contact_details{
+        height: 70vh;
+    }
+    
+    #contact_banner{                
+        height: 12em;
+        width: 105%;
+        color: white;
+        background-image: url("../images/telephoneimg.avif");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        opacity: 2;
+    }
+    #contact_banner > h1{
+        font-size: 2em;
+        font-weight: bold;
+        padding-top: 6rem;
+        animation: slideMe .9s ease-in;
+    }
+    #contact_banner > p{
+        font-family: 'Signika Negative', sans-serif;
+        font-size: 17px;
+        color: #E9E3E3;
+        padding-top: 1em;
+    }
+    .contact_right{
+        display: none;
+        z-index: -2;
+        height: 100vh;
+        width: 107vw;
+    }
+    
+    .register_action{
+        display: block;
+        border: 2px solid var(--red-boy);
+        border-radius: 10px;
+        background-color: rgb(0, 0, 0, 0.2);
+        color: white;
+        transition: 1s;
+        transition: ease-out 1s;
+        width: 40%;
+        font-size: 10px;
+        padding: 3px 1rem;
+        position: relative;
+    }
+    .register_action:hover {
+        display: flex;
+        margin: 8em;
+        border: 2px solid var(--red-boy);
+        border-radius: 10px;
+        background-color: var(--red-boy);
+        transition: 1s;
+        transition: ease-out 1s;
+        color: white;
+        font-size: 30px;
+        padding: 3px 1rem;
+        width: 30%;
+    }
+    #contact_lower{
+        color: white;
+        background-color: black;
+        height: 30vh;
+        position: absolute;
+        padding: 2em 3rem;
+    }
+    #contact_lower > h1{
+        font-size: 16px;
+        font-weight: bold;
+    }
+    #contact_lower > p{
+        font-family: 'Exo', sans-serif;
+        font-size: 13px;
+    }
+    
+}
+@media screen and (max-width: 320px){
+    #logo_img {
+        width: 12em;
+    }
+} */
+
+/* MEDIA QUERY ends here */
