--- a/assets/css/courses.css
+++ b/assets/css/courses.css
@@ -1,368 +1,55 @@
-:root{
-    --g-font: rgb(36, 36, 235);
+.main{
+    margin: 1.5rem 0 2rem 0;
+    padding: 2rem;
+}
+.row{
+    margin-bottom: 0rem;
 }
 
-.navbar{
-    background-color: black;
-    opacity: 0.8;
+.card{
+    margin-bottom: 1.5rem;
+    min-height: 530px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
-
-.container > h2 {
-font-size: 40px;
-text-align: start;
-font-weight: bold;
-color: #164176;
-font-family: 'Titillium Web', sans-serif;
+.card:hover{
+    margin-bottom: 1.5rem;
+    min-height: 520px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
-
-.container > h3{
-text-align: center;
-font-weight: bold;
-font-family: 'Space Grotesk', sans-serif;
-color: var(--g-font);
-padding: 6px 6px;
-}
-
-.reg_btn{
-    background-color: var(--g-font);
-    border: 1px solid black;
-    font-size: 16px;
-    padding: 5px;
-    border-radius: 5px;
-    transition: 1s;
-    transition: ease-out 1s;
-}
-.reg_btn:hover{
-    color: var(--g-font);
-    background-color: white;
-    border: 1px solid var(--g-font);
-    font-size: 16px;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-.pl_div{
-width: 22rem;
-height: 37em;
-margin: 6px;
-background-color: white;
-border-radius: 20px;
-}
-.pl_div > img {
-justify-items: center;
-width: 14rem;
-height: 12rem;
-padding: 6px;
-border-radius: 20px;
-}
-.pl_row{
-display: flex;
-justify-content: space-around;
-padding-bottom: 2em;
-}
-.pl_div > button {
-padding: 0.3em 3em;
-border: 1px solid var(--g-font);
-border-radius: 15px;
-transition: 1s;
-transition: ease-out 1s;
-}
-.pl_div > button:hover {
-padding: 0.3em 3em;
-background-color: var(--g-font);
-color: white;
-}
-.ml_div{
-width: 22rem;
-height: 37em;
-margin: 6px;
-background-color: white;
-border-radius: 20px;
-}
-.ml_div > img {
-justify-items: center;
-width: 16rem;
-height: 14rem;
-padding: 6px 0em;
-border-radius: 18px;
-}
-.ml_div > button {
-padding: 0.3em 3em;
-border: 1px solid var(--g-font);
-border-radius: 15px;
-transition: 1s;
-transition: ease-out 1s;
-}
-.ml_div > button:hover {
-padding: 0.3em 3em;
-background-color: var(--g-font);
-color: white;
-}
-.ml_row{
-display: flex;
-justify-content: space-around;
-}
-
-
-.card_content{
-border-radius: 40px;
-z-index: 100;
-}
-.card_content > h2{
-font-size: 1.5em;
-font-weight:bold;
-}
-.card_content p{
-text-align: justify;
-}
-
-@media screen and (max-width: 768px) {
-    .ms_div > button {
+.enrol-btn{
+    border: 2px solid black;
+    width: 40%;
+    display: flex;
+    margin: auto;
+    justify-content: center;
     border-radius: 10px;
-    /* width: 4rem; */
-    }
-    .container > h2 {
-    font-size: 30px;
-    font-weight: bold;
-    font-family: 'Titillium Web', sans-serif;
-    }
-
-    .container > h3{
-    text-align: start;
-    font-weight: bold;
-    color: #1a4e8d;
-    padding: 20px 0;
-    }
-    .pl_div{
-    width: 36rem;
-    height: 32rem;
-    margin: 8px;
-    background-color: white;
-    }
-    .pl_div > img {
-    justify-items: center;
-    width: 30rem;
-    height: 20rem;
-    }
-    .pl_row{
+    transition: ease-in-out 1s;
+}
+.enrol-btn:hover{
+    background-color: rgb(39, 38, 38);
+    color: white;
+    width: 40%;
     display: flex;
-    flex-direction: column;
-    }
-
-    .ml_div{
-    width: 36rem;
-    height: 32rem;
-    margin: 8px;
-    background-color: white;
-    }
-    .ml_div > img {
-    justify-items: center;
-    width: 30rem;
-    height: 20rem;
-    }
-    .ml_div > button {
-    padding-bottom: 0rem;
-    border: 1px solid var(--g-font);
-    }
-    .ml_row{
-    display: flex;
-    flex-direction: column;
-    }
-    .card_content > h2{
-    font-size: 1.5em;
-    font-weight:bold;
-    }
-    }
-    @media screen and (max-width: 414px) {
-    .container{
-    padding: 0;
-    margin: 0;
-    }
-    .ms_div > button {
+    margin: auto;
+    justify-content: center;
     border-radius: 10px;
-    }
-    .container > h2 {
-    font-size: 25px;
-    font-weight: bold;
-    font-family: 'Titillium Web', sans-serif;
-    }
-
-    .container > h3{
-    font-size: 20px;
-    text-align: start;
-    font-weight: bold;
-    color: var(--g-font);
-    padding: 5px 0 0 0;
-    }
-    .pl_div{
-    width:25rem;
-    height: 28rem;
-    margin: 6px;
-    background-color: white;
-    }
-    .pl_div > img {
-    justify-items: center;
-    width: 22rem;
-    height: 14rem;
-    }
-    .pl_row{
-    display: flex;
-    flex-direction: column;
-    }
-
-    .ml_div{
-    width: 25rem;
-    height: 28rem;
-    margin: 6px;
-    background-color: white;
-    }
-    .ml_div > img {
-    justify-items: center;
-    width: 22rem;
-    height: 14rem;
-    }
-    .ml_div > button {
-    padding-bottom: 0rem;
-    border: 1px solid var(--g-font);
-    }
-    .ml_row{
-    display: flex;
-    flex-direction: column;
-    }
-    .card_content > h2{
-    font-size: 1em;
-    font-weight:bold;
-    }
+}
+a{
+    color: black;
+    text-decoration: none;
+}
+a:hover{
+    color: black;
+    text-decoration: none;
 }
 
-@media screen and (max-width: 375px) {
-    .container{
-    padding: 0;
-    margin: 0;
+@media screen and (max-width: 667px) {
+    .main{
+        margin: 1.5rem 0 1rem 0;
+        padding: 1rem;
     }
-    .card > img {
-    justify-items: center;
-    width: 16rem;
-    height: 14rem;
-    }
-    .container > h2 {
-    font-size: 25px;
-    font-weight: bold;
-    font-family: 'Titillium Web', sans-serif;
-    }
-
-    .container > h3{
-    font-size: 20px;
-    text-align: center;
-    font-weight: bold;
-    color: #761d16;
-    padding: 5px 0 0 0;
-    }
-    .pl_div{
-    width:22em;
-    height: 26em;
-    margin: 6px;
-    background-color: white;
-    }
-    .pl_div > img {
-    justify-items: center;
-    width: 18em;
-    height: 14em;
-    }
-    .pl_row{
-    display: flex;
-    flex-direction: column;
-    }
-
-    .ml_div{
-    width: 22em;
-    height: 26em;
-    margin: 6px;
-    background-color: white;
-    }
-    .ml_div > img {
-    justify-items: center;
-    width: 18em;
-    height: 14em;
-    }
-    .ml_div > button{
-    border: 1px solid var(--g-font);
-    border-radius: 15px;
-    }
-    .ml_row{
-    display: flex;
-    flex-direction: column;
-    }
-    .card_content > h2{
-    font-size: 1em;
-    font-weight:bold;
+    .main h3{
+        padding: 0px;
+        font-size: 20px;
     }
 }
-@media screen and (max-width: 280px) {
-    .container{
-    padding: 0;
-    margin: 0;
-    }
-    .card > img {
-    justify-items: center;
-    width: 10rem;
-    height: 14rem;
-    }
-    button {
-    border-radius: 10px;
-    }
-    .container > h2 {
-    font-size: 30px;
-    font-weight: bold;
-    font-family: 'Titillium Web', sans-serif;
-    }
-
-    .container > h3{
-    text-align: start;
-    font-weight: bold;
-    color: #1a4e8d;
-    font-size: 20px;
-    padding: 20px 0;
-    }
-    .pl_div{
-    width:17rem;
-    height: 24em;
-    margin: 8px;
-    background-color: white;
-    }
-    .pl_div > img {
-    justify-items: center;
-    width: 15rem;
-    height: 12rem;
-    }
-    .pl_div > button {
-    padding-bottom: 0rem;
-    }
-    .pl_row{
-    display: flex;
-    flex-direction: column;
-    }
-    .ml_div{
-    width: 17rem;
-    height: 24em;
-    margin: 8px;
-    background-color: white;
-    }
-    .ml_div > img {
-    justify-items: center;
-    width: 15rem;
-    height: 12rem;
-    }
-    .ml_div > button {
-    padding-bottom: 0rem;
-    }
-    .ml_row{
-    display: flex;
-    flex-direction: column;
-    }
-    .card_content > h2{
-    font-size: 1em;
-    font-weight:bold;
-    }
-}
-
