--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,20 @@
-:root{
-    --g-font: rgb(36, 36, 235);
+/* Start Global Styling */
+:root {
+    --red-boy: rgb(239, 0, 0);
 }
-
 body {
     margin: 0px;
     padding: 0px;
     background: #eaecfa;
 }
+.container-fluid{
+    padding: 0rem 8rem;
+}
 
+/* End Global Styling */
+
+
+/* Start Loader Styling */
 .loader {
     width: 250px;
     height: 50px;
@@ -16,23 +23,25 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     font-family: helvetica, arial, sans-serif;
     text-transform: uppercase;
     font-weight: 900;
-    color: #ce4233;;
+    color: var(--red-boy);
+    ;
     letter-spacing: 0.2em;
 
-    &::before, &::after {
+    &::before,
+    &::after {
         content: "";
         display: block;
         width: 15px;
         height: 15px;
-        background: #ce4233;;
+        background: var(--red-boy);
         position: absolute;
         animation: load .7s infinite alternate ease-in-out;
 
-        
+
     }
 
     &::before {
@@ -43,61 +52,87 @@ body {
         bottom: 0;
     }
 }
+
 .content {
-    display: none; /* Initially hide the content */
+    display: none;
     text-align: center;
     background-repeat: no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
     position: relative;
-    z-index: 9998; /* Place content below the loader */
+    z-index: 9998;
 }
 
 @keyframes load {
-0% { left: 0; height: 30px; width: 15px }
-50% { height: 8px; width: 40px }
-100% { left: 235px; height: 30px; width: 15px}
+    0% {
+        left: 0;
+        height: 30px;
+        width: 15px
+    }
+
+    50% {
+        height: 8px;
+        width: 40px
+    }
+
+    100% {
+        left: 235px;
+        height: 30px;
+        width: 15px
+    }
 }
+/* End Loader Styling */
+
+
 
 /* Start Navbar Styling */
-.navbar{
-    padding: 2rem 3rem;
-    width: 100%;
+.mynavbar{
     position: fixed;
     z-index: 1;
-    background-color: rgb(15, 15, 15);   
+    width: 100%;
 }
-.navbar-brand img{
+.navbar {
+    background-color: black;
+    padding: 1rem 0rem;        
+}
+.top-nav{
+    color: white;
+    padding: 0.5rem 0rem 0.5rem 0rem;
+    width: 100%;
+    position: fixed absolute;
+    background-color: rgb(31, 31, 31);
+}
+#logo_img {
+    width: 9em;
+}
+.navbar-brand img {
     width: 80%;
 }
-.footer-img{
-    width: 30%;
+.nav-link {
+    color: rgb(188, 187, 187);
+    font-size: 20px;
 }
-.nav-link{
+.nav-link:hover {
     color: white;
-    font-size: 20px;    
+    font-size: 20px;
 }
-.nav-link:hover{
-    color: white;
-    font-size: 20px;    
-}
-.nav-link:hover > .navhr{
+.nav-link:hover > .navhr {
     width: 100%;
     transition: 0.5s;
 }
-.nav-link > .activated{
+.nav-link>.activated {
     width: 100%;
 }
-.navhr{
+.navhr {
     width: 0%;
     padding: 0;
     margin: 0;
     height: 3px;
-    background-color: var(--g-font);
+    background-color: var(--red-boy);
     z-index: 1;
 }
-.reg_btn{
-    background-color: var(--g-font);
+.reg_btn {
+    background-color: var(--red-boy);
     border: 1px solid black;
     font-size: 16px;
     padding: 5px;
@@ -105,66 +140,139 @@ body {
     transition: 1s;
     transition: ease-out 1s;
 }
-.reg_btn:hover{
-    color: var(--g-font);
+.reg_btn:hover {
+    color: var(--red-boy);
     background-color: white;
-    border: 1px solid var(--g-font);
+    border: 1px solid var(--red-boy);
     font-size: 16px;
     padding: 5px;
     border-radius: 5px;
 }
-.activated{
+span {
+    color: var(--red-boy);
+}
+.activated {
     width: 0%;
     padding: 0;
     margin: 0;
     height: 3px;
-    background-color: var(--g-font);
+    background-color: var(--red-boy);
     z-index: 1;
+}
+.mo-icon {
+    z-index: 1;
+    border: 2px solid white;
+    width: 60px;
+    margin: 0 1em 0 0;
+    padding: 0.3rem 0rem;
+    color: white;
+    border-radius: 10px;
 }
 /* End Navbar Styling */
 
 
 
-/* Start Homepage Styles */
-main{
-    /* margin: 4rem 0rem; */
-    padding: 8rem 0rem;
-}
-.myfooter{
+
+/* Start Footer  */
+.myfooter {
     padding: 2rem 0rem;
-    background-color: black;
-    color: rgb(226, 223, 223);
+    background-color: rgb(50, 49, 49);
+    color: rgb(212, 209, 209);
 }
-.foot-feat{
-    padding: 1rem 2rem;
-    text-align: justify;
+.foot-feat {
+    padding: 1rem 0;
+    text-align: start;
 }
-.foot-feat p{
+.foot-feat h4{
+    font-size: 15px;
+    font-weight: bold;
+}
+.foot-feat p {
     margin-top: 1rem;
 }
-.myfooter2{    
+.myfooter2{
+    font-size: 12px;
+    background-color: rgb(36, 36, 36);  
     padding: 1rem 0rem;
-    color: rgb(217, 214, 214);
+    color: rgb(206, 203, 203);      
 }
-/* End Homepage Styles */
+.footer-img {
+    width: 7em;
+}
+.map_link > a{
+    color: gray;
+}
+.map_link > a:hover{
+    color: rgb(239, 50, 0);
+    text-decoration: none;
+}
+/* End Footer */
 
-/* Testimonial Style */
-.testimonial{
-    margin: 4rem 0rem;
-}
-.testimonial h5{
-    margin: 2rem 0rem;
-}
-.testify{
-    margin-bottom: 1.5rem;
-    padding: 2rem 1rem;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-.testify i{
-    font-size: 30px;
-}
-/* End Testimonial Styles */
 
-/* Contact styling section */
 
-/* contact styling ends here */
+
+/* Start Media Queries Styling */
+@media screen and (max-width: 667px) {
+    .navbar {
+        margin: 0px;
+        padding: 2rem 0rem;
+    }
+    .top-nav{
+        padding: 0.5rem 0rem 0.5rem 0rem;
+        font-size: 14px;
+    }
+
+    .navbar-brand img {
+        width: 50%;
+    }
+
+    .navbar-expand-lg {
+        margin-left: 0px;
+        padding-left: 0rem;
+    }
+
+    .navbar-fixed-top {
+        margin-left: 0px;
+        padding-left: 0px;
+    }
+    .container-fluid{
+        padding: 0rem 1rem;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    #logo_img {
+        width: 12em;
+    }  
+    .container-fluid{
+        padding: 0rem 1rem;
+    }  
+}
+
+@media screen and (max-width: 414px) {
+    #logo_img {
+        width: 12em;
+    }   
+    .container-fluid{
+        padding: 0rem 1rem;
+    } 
+}
+
+@media screen and (max-width: 375px) {
+    #logo_img {
+        width: 10em;
+    } 
+    .container-fluid{
+        padding: 0rem 1rem;
+    }   
+}
+
+@media screen and (max-width: 320px) {
+    #logo_img {
+        width: 10em;
+    }  
+    .container-fluid{
+        padding: 0rem 1rem;
+    } 
+}
+/* End Media Queries Styling */
